--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.3",
-    "postboot": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
@@ -42,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-table": "^7.7.20"
+    "@types/react-table": "^7.7.20",
+    "tailwindcss": "^3.4.3"
   }
 }
